rewrite user api as swaggo format
