# app/controllers/users.go
@@ -13,6 +13,15 @@ type DeleteResponse struct {
 	ID string `json:"id"`
 }
 
+// CreateUser godoc
+// @Summary create user
+// @Description create user
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param params body models.User true "user details"
+// @Success 200 {array} models.User
+// @Router /user [POST]
 func CreateUser(w http.ResponseWriter, r *http.Request) {
 	// get the body of our POST request
 	// return the string response containing the request body
@@ -31,10 +40,10 @@ func CreateUser(w http.ResponseWriter, r *http.Request) {
 	w.Write(responseBody)
 }
 
-// GetOrders godoc
-// @Summary Get details of all orders
-// @Description Get details of all orders
-// @Tags orders
+// GetUsers godoc
+// @Summary Get details of all users
+// @Description Get details of all users
+// @Tags users
 // @Accept  json
 // @Produce  json
 // @Success 200 {array} models.User
@@ -50,9 +59,17 @@ func GetUsers(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-Type", "application/json")
 	w.Write(responseBody)
-
 }
 
+// GetUser godoc
+// @Summary Get details of user
+// @Description Get details of user
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param id path int true "user search by id"
+// @Success 200 {object} models.User
+// @Router /user/{id} [GET]
 func GetUser(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id := vars["id"]
@@ -66,6 +83,16 @@ func GetUser(w http.ResponseWriter, r *http.Request) {
 	w.Write(responseBody)
 }
 
+// UpdateUser godoc
+// @Summary update user
+// @Description update user
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param id path int true "user search by id"
+// @Param params body models.User true "user details"
+// @Success 200 {object} models.User
+// @Router /user/{id} [PUT]
 func UpdateUser(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id := vars["id"]
@@ -83,6 +110,15 @@ func UpdateUser(w http.ResponseWriter, r *http.Request) {
 	w.Write(responseBody)
 }
 
+// DeleteUser godoc
+// @Summary delete user
+// @Description delete user
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param id path int true "user search by id"
+// @Success 200 {object} DeleteResponse
+// @Router /user/{id} [DELETE]
 func DeleteUser(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id := vars["id"]
